# circleguy

./: Cargo.toml  circleguy.js  circleguy_bg.wasm  index.html
.github/workflows/: pages.yml
Puzzles/Definitions/Geranium/: geranium.hps  geranium_w.hps
src/: main.rs
src/hps/: builtins.rs
src/hps/custom_values/: hpspuzzledata.rs
src/hps/data_storer/: data_storer.rs  def_entry.rs  io.rs  keybind_data.rs  puzzle_io.rs
src/puzzle/: puzzle.rs
src/ui/: app.rs  render.rs
