[package]
name = "circleguy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperpuzzlescript = {git = "https://github.com/HactarCE/hyperspeedcube.git", rev = "79d7575657f4df610868d6e4026ef62ebccfc699" }
approx_collections = "3.2.0"
auto_ops = "0.3.0"
eframe = "0.32.1"
egui = "0.32.1"
hcegui = {git = "https://github.com/HactarCE/hcegui", rev = "e84e306e64300582af93c1e04adbea3817df2f7f", features = ["ansi"]}
kdl = "6.3.4"
log = "0.4.27"
rand = "0.9.2"
web-time = "1.1.0"
num = "0.4.3"
include_dir = "0.7.4"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                    # to access the DOM (to hide the loading text)
getrandom_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
ring = {version = "*", features = ["wasm32_unknown_unknown_js"]}

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
approx_collections = { git = "https://github.com/HactarCE/approx_collections.git"}
